# yast-mock

./: .gitignore  README.md  RPMNAME  configure.in.in
src/: .gitignore  Makefile.am  MockModule.cc  MockModule.h  ProxyComponent.cc  ProxyComponent.h  ProxyFunction.cc  ProxyFunction.h  ProxyModule.cc  ProxyModule.h  StubFunction.cc  StubFunction.h  StubTracker.cc  StubTracker.h  Y2CCMock.cc  Y2CCMock.h  Y2MockComponent.cc  Y2MockComponent.h  log.h
test/: stub_test.rb
